# bevy_fps

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: character.rs  components.rs  input.rs  main.rs  net.rs
server/: Cargo.toml
server/assets/data/: rocket_launcher.weapon.ron
server/src/: characters.rs  events.rs  gamemode.rs  input.rs  main.rs  net.rs
shared/: Cargo.toml
shared/src/: character.rs  input.rs  lib.rs  protocol.rs  resources.rs  snapshot.rs  utils.rs  weapons.rs
shared/src/protocol/: impl_character_snapshot.rs  impl_player_input.rs  impl_tick_snapshot.rs
