[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]

# engine
bevy = { version = "0.14.0", features = ["serialize"] }

# physics
avian3d = { version="0.1.0", features = ["enhanced-determinism"]}

# networking
bevy_quinnet = { version = "0.9.0"}

# serialization
bevy_common_assets = { version= "0.11.0", features = ["ron"] }
serde = { version = "1.0.203", features = ["derive"] }



[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3
